--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,1 +1,9 @@
-{% include custom/header.html %}
+<div class="grid site-header">
+  <div>
+    {% include custom/header.html %}
+  </div>
+  <div>
+    {% include custom/navigation.html %}
+  </div>
+</div>
+
