--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,8 +1,8 @@
 $blockquote: $type-border !default;
-$sans: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
-$serif: "PT Serif", Georgia, Times, "Times New Roman", serif !default;
+$sans: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$serif: Georgia, Times, "Times New Roman", serif !default;
 $mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
-$heading-font-family: "PT Serif", "Georgia", "Helvetica Neue", Arial, sans-serif !default;
+$heading-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $header-title-font-family: $heading-font-family !default;
 $header-subtitle-font-family: $heading-font-family !default;
 
@@ -19,6 +19,9 @@ body > header h1 {
   @extend .heading;
   font-family: $header-title-font-family;
   font-weight: normal;
+  a {
+    text-decoration: none;    
+  }
   line-height: 1.2em;
   margin-bottom: 0.6667em;
 }
@@ -29,10 +32,10 @@ body > header h2 {
 body {
   line-height: 1.5em;
   color: $text-color;
-  @extend .serif;
+  @extend .sans;
 }
 h1 {
-  font-size: 2.2em;
+  font-size: 1.75em;
   line-height: 1.2em;
 }
 
@@ -73,7 +76,7 @@ ol { list-style-type: decimal;
   ol { list-style-type: lower-alpha; margin-bottom: 0px;
     ol { list-style-type: lower-roman; margin-bottom: 0px; }}}
 
-ul, ol { &, ul, ol { margin-left: 1.3em; }}
+ul, ol { &, ul, ol { margin-left: 0em; }}
 ul, ol { ul, ol { margin-bottom: 0em; }}
 
 strong { font-weight: bold; }
