--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,18 +1,9 @@
-body > header {
-  background: $header-bg;
-  h1 {
-    display: inline-block;
-    margin: 0;
-    a, a:visited, a:hover {
-      color: $title_color;
-      text-decoration: none;
-    }
+.site-header {
+  margin-top: 50px;
+  a:visited {
+    color: $text-color;
   }
-  h2 {
-    margin: .2em 0 0;
-    @extend .sans;
-    font-size: 1em;
-    color: $subtitle-color;
-    font-weight: normal;
+  a:hover {
+    color: $text-color-light;
   }
 }
