--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,6 @@
-<ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-</ul>
+
+  <ul class="site-navigation">
+    <li><a href="{{ root_url }}/">HOME</a></li>
+    <li><a href="{{ root_url }}/about">ABOUT</a></li>
+    <li><a href="{{ root_url }}/blog">BLOG</a></li>
+  </ul>    
