--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -2,5 +2,9 @@
   font-size: 1.3em;
   a {
     text-decoration: none;
+    color: $text-color;
+  }
+  a:hover {
+    color: $text-color-light;
   }
 }
